# react-flashcards-demo

./: README.md
flashcard-ui/: package-lock.json  package.json
flashcard-ui/src/: App.js  FlashcardGenerator.js
flashcard_api/: .gitignore  main.py  pyproject.toml
