[tool.poetry]
name = "flashcard-api"
version = "0.1.0"
description = ""
authors = ["Siddharth Jhanwar <siddharthjhanwar@yahoo.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
